--- a/public/backend/css/sb-admin-2.css
+++ b/public/backend/css/sb-admin-2.css
@@ -11280,3 +11280,12 @@ body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
 
+.userTypee {
+  width: 49%;
+  display: inline-block;
+}
+
+.userTypee  label {
+  font-weight: bold;
+}
+
