--- a/public/formstyles.css
+++ b/public/formstyles.css
@@ -120,6 +120,7 @@
     margin-bottom: 30px;
     overflow: hidden;
     color: lightgrey;
+    display: none;
   }
   
   #progressbar .active {
@@ -134,26 +135,12 @@
     position: relative;
     font-weight: 400;
   }
-  
-  #progressbar #account:before {
+   ul#progressbar li:before {
     font-family: FontAwesome;
     content: '\f007';
   }
   
-  #progressbar #personal:before {
-    font-family: FontAwesome;
-    content: '\f02d';
-  }
-  
-  #progressbar #payment:before {
-    font-family: FontAwesome;
-    content: '\f1ad';
-  }
-  
-  #progressbar #confirm:before {
-    font-family: FontAwesome;
-    content: '\f00c';
-  }
+ 
   
   #progressbar li:before {
     width: 50px;
