--- a/public/frontend/css/custom.css
+++ b/public/frontend/css/custom.css
@@ -145,3 +145,11 @@
     box-shadow: 0 0 5px rgb(0 0 0 / 7%);
     font-size: 0.8rem;
 }
+
+.sidebar .sidebar-brand {
+    height: auto;
+}
+
+.sidebar .sidebar-brand img {
+    border-radius: 5px;
+}
