--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10019,3 +10019,11 @@ h3 {
     border-color: #dee2e6;
   }
 }
+
+.sidebar .sidebar-brand {
+  height: auto;
+}
+
+.sidebar .sidebar-brand img {
+  border-radius: 5px;
+}
