--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10038,3 +10038,6 @@ h3 {
   background-repeat: no-repeat !important;
   background-position: center center !important;
 }
+.iti {
+  display: block !important;
+}
