--- a/public/backend/css/custom.css
+++ b/public/backend/css/custom.css
@@ -11,8 +11,15 @@
     max-width: 100%;
 }
 input[type='tel'] {
-    left: 25%;
+    left: 0;
+    padding-left: 70px !important;
 }
 .iti.iti--allow-dropdown {
     display: block;
   }
+
+
+a.imgfileAnchor img {
+    height: 100px;
+    margin-bottom: 20px;
+}
